Move react folder

--- a/MyCalendar.MVC/React/public/index.html
+++ b/MyCalendar.MVC/React/public/index.html
@@ -7,6 +7,6 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root" data-subsiteroot="/" data-contentroot="https://localhost:53822"></div>
+    <div id="root" data-subsiteroot="/" data-contentroot="http://localhost:53822/errandrunner/neworder"></div>
   </body>
 </html>
