Initial implementation of first react component rendering in MVC for ER new order process with new customer repository

--- a/MyCalendar.MVC/React/public/index.html
+++ b/MyCalendar.MVC/React/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/util.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/main.css">
     <title>React App</title>
   </head>
   <body>
-    <div id="root" data-subsiteroot="/" data-contentroot="http://localhost:53822/errandrunner/neworder"></div>
+    <div id="root" data-subsiteroot="/" data-contentroot="http://localhost:53822"></div>
+    <div id="er-neworder"></div>
   </body>
 </html>
