--- a/MyCalendar.React/public/index.html
+++ b/MyCalendar.React/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/util.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/main.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/fonts/iconic/css/material-design-iconic-font.min.css">
+  
     <title>React App</title>
   </head>
   <body>
