--- a/MyCalendar.React/public/index.html
+++ b/MyCalendar.React/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/Loader.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/util.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/main.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/fonts/iconic/css/material-design-iconic-font.min.css">
