Add new sidebar menu for calendar with interactive functions/tools to manipulate rendering of events and views. Added pagination, new loader styles, site layout styles, refactoring, add react-bootstrap to calendar app, start implementation of save event component, major calendar improvements and style tweaks. Upgrade to v5

--- a/MyCalendar.React/FullCalendar/public/index.html
+++ b/MyCalendar.React/FullCalendar/public/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/Loader.css">
-    <!-- <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet' />
-    <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'> -->
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/util.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/main.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/fonts/iconic/css/material-design-iconic-font.min.css">
+
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>React App</title>
   </head>
