--- a/MyCalendar.React/ErrandRunner/public/index.html
+++ b/MyCalendar.React/ErrandRunner/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/util.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/css/main.css">
     <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/form/fonts/iconic/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:53822/Content/SidebarMenu.css">
     <script src="https://getaddress-cdn.azureedge.net/scripts/jquery.getAddress-4.0.0.min.js"></script>
     <title>React App</title>
   </head>
